<resources>
    <string name="app_name">Reproductor Premium</string>
    <string name="Nombre_app">Reproductor Premium</string>
    <string name="Nombre_autor">Leidy Zambrano</string>
    <string name="Bienvenida_home">Inicia una nueva aventura con Reproductor Premium y descubre una nueva forma de ver el mundo.</string>
    <string name="TextoBoton_home">Comienza</string>
    <string name="registrate_home">Registrate</string>
    <string name="Descripcion_Login">La aventura está por iniciar, por favor inicia sesión.</string>
    <string name="Ingresar_login">Ingresar</string>
    <string name="Recupera_Login">Recupera tu contraseña</string>
    <string name="Mensaje_Lgin">No tienes Cuenta?</string>
    <string name="Registrate_Login">Registrate</string>
    <string name="titulo_registro">Registro</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo_electr_registro">Correo electrónico</string>
    <string name="contraseña_registro">Contraseña</string>
    <string name="repetircontraseña_registro">Repetir Contraseña</string>
    <string name="mensaje_Registro">Acepto los</string>
    <string name="terminosYcondiciones_registro">Términos y Condiciones</string>
    <string name="registrarse_button">Registrarse</string>
    <string name="menYaTienesCuenta_registro">¿Ya tienes cuenta?</string>
    <string name="mensajeInicio_registro">Iniciar Sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio">Inicio</string>
    <string name="buscar">Buscar</string>
    <string name="favoritos">Favoritos</string>
    <string name="mapa">Mapa</string>
    <string name="inicioL">Inicio</string>
    <string name="buscarL">Buscar</string>
    <string name="configuraci_n">Configuración</string>
    <string name="informaci_n">Información</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="inicioM">Inicio</string>
    <string name="buscarP">Buscar</string>
    <string name="configuraci_nP">Configuración</string>
    <string name="informaci_nP">Información</string>
    <string name="productos_destacados">Productos destacados</string>
    <string name="agregar_al_carrito">Agregar al carrito</string>
    <string name="imagen_del_producto">Imagen del producto</string>
    <string name="Prueba_admin">Aquí irá toda la información sobre el administrador</string>
    <string name="Prueba_carrito">Aquí irá toda la información sobre el carrito de compras</string>
    <string name="Prueba_catalogo">Aquí irá toda la información sobre el catalogo de productos</string>
    <string name="Prueba_favoritos">Aquí irá toda la información sobre los favoritos</string>
    <string name="Prueba_perfil">Aquí irá toda la información sobre el perfil del usuario</string>
    <string name="Prueba_info">Aquí irá toda la información sobre la información general</string>
    <string name="ingresar_con_huella">Ingresar con huella</string>
    <string name="foto_de_perfil">foto_de_perfil\n</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="editar_perfil_titulo">Editar perfil</string>
    <string name="foto_de_perfil_t">Foto de perfil</string>
    <string name="cambiar_foto_de_perfil">Cambiar foto de perfil</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="repetir_nueva_contrase_a">Repetir nueva contraseña</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="correo">Correo</string>
    <string name="opcion_vendedor">Opcion Vendedor</string>
    <string name="opcion_administrador">Opcion Administrador</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="perfil">Perfil</string>
</resources>