<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home_drawer"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/inicioM" />

        <item
            android:id="@+id/nav_search_drawer"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/buscarP" />

        <item
            android:id="@+id/nav_settings_drawer"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/configuraci_nP" />

        <item
            android:id="@+id/nav_info_drawer"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/informaci_nP" />

    </group>

</menu>