<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/background_primary"
    tools:context=".Activities.Home">

    <ImageView
        android:id="@+id/logo_home"
        android:layout_width="374dp"
        android:layout_height="292dp"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        android:layout_marginTop="20dp"/>


    <TextView
        android:id="@+id/Nombre_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arbutus"
        android:text="@string/Nombre_app"
        android:textColor="@color/Letra_NomApp"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/Bienvenida_home"
        android:layout_width="337dp"
        android:layout_height="90dp"
        android:fontFamily="@font/tiro_devanagari_sanskrit_italic"
        android:gravity="center_horizontal"
        android:text="@string/Bienvenida_home"
        android:textColor="@color/Letra_NomApp"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/button_home"
        android:layout_width="180dp"
        android:layout_height="72dp"
        android:backgroundTint="@color/Color_app"
        android:fontFamily="@font/tiro_devanagari_sanskrit_italic"
        android:text="@string/TextoBoton_home"
        android:textColor="@color/Letra_Boton"
        android:textSize="25sp"
        app:strokeColor="@color/Letra_Boton"
        app:strokeWidth="2dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/Registrate_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/tiro_devanagari_sanskrit_italic"
        android:text="@string/registrate_home"
        android:textColor="@color/Letra_NomApp"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        />
</LinearLayout>